sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value True
  var echange = True
                ^AlgBubbleSort1:5: error: not found: value False
    echange = False
              ^AlgBubbleSort1:6: error: not found: value getNombreValeur
    for (k <- 0 to getNombreValeur() -2 ){
                   ^AlgBubbleSort1:9: error: not found: value echanges
        echanges = True;
        ^