sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var echange = True
  while (echange){
    echange = False
    for (k <- 0 to getNombreValeur() -2 ){
      if (getValeur(k) > getValeur(k+1)){
        echange(k, k+1);
        echanges = True;
      }
    }
  }
}